# bookstore-api

./: .dockerignore  .gitignore  Dockerfile  Dockerfile-requirements.txt  Makefile  README.md  docker-compose.yml  env.dev  pyproject.toml  render.yaml  start.sh
.github/workflows/: build.yml  github-actions-demo.yml  workflow-pr.yaml
bookstore/: asgi.py  settings.py  urls.py
order/: admin.py  factories.py
order/migrations/: 0001_initial.py
order/models/: __init__.py  order.py
order/serializers/: __init__.py  order_serializer.py
order/tests/test_order_viewsets/: test_order_viewset.py
order/tests/test_viewsets/: test_order_viewset.py
order/viewsets/: order_viewset.py
product/: factories.py
product/migrations/: 0001_initial.py  0002_alter_product_description_alter_product_title.py  0003_alter_product_description_alter_product_title.py
product/models/: __init__.py  category.py  product.py
product/serializers/: __init__.py  category_serializer.py  product_serializer.py
product/tests/test_product_viewsets/: test_category_viewset.py  test_product_viewset.py
product/tests/test_viewsets/: test_category_viewset.py  test_product_viewset.py
product/viewsets/: category_viewset.py  product_viewset.py
