[tool.poetry]
name = "bookstore"
version = "0.1.0"
description = "BookStore API"
authors = ["jose-uchoa <j-uchoa@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.3.2"
factory-boy = "^3.2.1"
django = "^4.2.2"
django-rest-framework = "^0.1.0"
django-extensions = "^3.2.3"
djangorestframework = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
