[tool.poetry]
name = "bookstore"
version = "0.1.0"
description = "BookStore API"
authors = ["jose-uchoa <j-uchoa@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.4"
pytest = "^7.3.2"
factory-boy = "^3.2.1"
django = "^4.2.2"
django-rest-framework = "^0.1.0"
django-extensions = "^3.2.3"
djangorestframework = "^3.14.0"
pytest-django = "^4.5.2"
django-debug-toolbar = "^4.1.0"
psycopg2-binary = "^2.9.6"
flake8 = "^6.0.0"
black = "^23.7.0"


[tool.poetry.group.dev.dependencies]
pytest-django = "^4.5.2"

[build-system]
requires = ["poetry>=1.5.1"]
build-backend = "poetry.core.masonry.api"
